some minor fixes in design

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             </div>
             </form>
-            <div class="languaged">
+            <div class="language">
                 Google offered in:
                 <!-- <div class="lang-links"> -->
                 <a href="#" class="lang">हिन्दी</a>
