btn group fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </span>
                     <input type="text" name="q" id="searchbox">
                 </div>
-                <div class="btn-group">
+                <div class="btn-group flex">
                     <input type="submit" class="cap" value="google search">
                     <input type="submit" class="cap" value="i'm feeling lucky">
 
